syntax = "proto3";

package booking;

service BookingHealthService {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest { string message = 1; }

message PingResponse { string message = 1; }